--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "heroku": "^7.67.1",
-    "node.js": "^0.0.1-security"
+    "node.js": "^0.0.1-security",
+    "uuid": "^9.0.0"
   }
 }
